Tokenization fix